# soen342

./: .gitignore  README.md  check_database.sql  check_db.py  eurail.db  pyproject.toml
docs/: data_details.md
src/EURailNetwork/: __main__.py  db_sqlite.py  inspectors.py  loader.py  models.py  registries.py  schema.py  utils_time.py
src/EURailNetwork.egg-info/: SOURCES.txt  entry_points.txt
tests/: test_search_by.py  test_search_sort.py
