[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EURailNetwork"
version = "0.1.0"
description = "Search system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]